tests/snapshots/yaml_suite_snapshots__yaml_suite_9C9N_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Wrong indented flow sequence
  from: "@perlpunk"
  tags: error flow indent sequence
  fail: true
  yaml: "---\nflow: [a,\nb,\nc]\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :flow\n   +SEQ []\n    =VAL :a\n"
