tests/snapshots/yaml_suite_snapshots__yaml_suite_9C9N_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Wrong indented flow sequence
  tags: error flow indent sequence
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :flow\n   +SEQ []\n    =VAL :a\n"
  yaml: "---\nflow: [a,\nb,\nc]\n"
