tests/snapshots/yaml_suite_snapshots__yaml_suite_9CWY_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Invalid scalar at the end of mapping
  from: "@perlpunk"
  tags: error mapping sequence
  fail: true
  yaml: "key:\n - item1\n - item2\ninvalid\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   +SEQ\n    =VAL :item1\n    =VAL :item2\n   -SEQ\n"
