tests/snapshots/yaml_suite_snapshots__yaml_suite_9CWY_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Invalid scalar at the end of mapping
  tags: error mapping sequence
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   +SEQ\n    =VAL :item1\n    =VAL :item2\n   -SEQ\n"
  yaml: "key:\n - item1\n - item2\ninvalid\n"
