tests/snapshots/yaml_suite_snapshots__yaml_suite_9DXL_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: "Spec Example 9.6. Stream [1.3]"
  from: "6ZKB, modified for YAML 1.3"
  tags: spec header 1.3-mod
  yaml: "Mapping: Document\n---\n# Empty\n...\n%YAML 1.2\n---\nmatches %: 20\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :Mapping\n   =VAL :Document\n  -MAP\n -DOC\n +DOC ---\n  =VAL :\n -DOC ...\n +DOC ---\n  +MAP\n   =VAL :matches %\n   =VAL :20\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"Mapping\": \"Document\"\n}\nnull\n{\n  \"matches %\": 20\n}\n"
  emit: "Mapping: Document\n---\n...\n%YAML 1.2\n---\nmatches %: 20\n"
